--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,14 +7,14 @@ edition = "2021"
 
 [dependencies]
 clap = { version = "4.5.4", features = ["derive"] }
-log = "0.4.21"
 rdkafka = { version = "0.36", features = ["cmake-build"] }
-tokio = { version = "1.37", features = ["full"]}
+tokio = { version = "1.37", features = ["full"] }
 uuid = { version = "1.8.0", features = ["v4", "serde"] }
 serde = "1.0.198"
 serde_json = "1.0.116"
 async-trait = "0.1.80"
-tracing = "0.1.40"
-pretty_env_logger = "0.5.0"
-chrono = { version = "0.4.38", features=["serde"] }
+chrono = { version = "0.4.38", features = ["serde"] }
 rand = "0.8.5"
+tracing = "0.1.40"
+tracing-appender = "0.2.3"
+tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
